--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 # .travis.yml
-
-dist: xenial
+sudo: false
 
 language: python
 
 cache: pip
 
 python:
-    - "3.8"
+    - "3.7"
 
 install:
     - pip install requirements.txt
 
 script:
-    - pytthon unittests.py
+    - python tests/unittests.py
