--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
     - "3.7"
 
 install:
-    - pip install requirements.txt
+    - pip install -r requirements.txt
 
 script:
     - python tests/unittests.py
